fix: css viz container spacing

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 
 .overview{
   width: 75%;
-  height: 300px;
-  margin-top: 20px;
+  /*height: 300px;*/
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -87,8 +87,9 @@
 #vis {
   display: inline-block;
   position: fixed;
-  top: 275px;
+  /*top: 275px;*/
   /* top: 60px;*/
+  bottom: 10px;
   z-index: 1;
   /* margin-left: 0; */
   margin-left: 110px;
